Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35724

VEC_DISTANCE does not work in HAVING clause

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • N/A
    • N/A
    • Vector search
    • None

    Description

      create table t (v vector(1) not null, vector(v));
      insert into t values (0x31313131),(0x32323232);
      select v from t having vec_distance(v,0x30303030) > 0;
      drop table t;
      

      bb-11.8-MDEV-35450-vec_distance adac8f1b4f2635fffb90a9ec16175e3bda6ce1e9

      mysqltest: At line 3: query 'select v from t having vec_distance(v,0x30303030) > 0' failed: ER_VEC_DISTANCE_TYPE (4206): Cannot determine distance type for VEC_DISTANCE, index is not found
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.