MDEV-35724 VEC_DISTANCE does not work in HAVING clause